@@ -4,24 +4,24 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_LATEST_LATEST_ITEMS="Latest Items"
+LATEST NEWS="Latest News"
 MOD_LATEST_CREATED="Created"
 MOD_LATEST_CREATED_BY="Created By"
-MOD_LATEST_MODIFIED_BY="Modified By"
+MOD_LATEST_LATEST_ITEMS="Latest Items"
 MOD_LATEST_NO_MATCHING_RESULTS="No Matching Results"
 
 ; Params
-MOD_LATEST_DESC="This Module shows a list of the most recently published Articles that are still current. Some that are shown may have expired even though they are the most recent."
-MOD_LATEST_COUNT_LABEL="Count"
-MOD_LATEST_COUNT_DESC="The number of items to display (default 5)"
-MOD_LATEST_ORDERING_LABEL="Order"
-MOD_LATEST_ORDERING_DESC="Ordering options"
+MOD_LATEST_FIELD_AUTHORS_LABEL="Authors"
+MOD_LATEST_FIELD_AUTHORS_DESC="A filter for the Authors"
 MOD_LATEST_FIELD_CATEGORY_LABEL="Category"
 MOD_LATEST_FIELD_CATEGORY_DESC="Select Articles from a specific Category or set of Categories."
-MOD_LATEST_RECENTLY_ADDED_FIRST="Recently Added First"
-MOD_LATEST_RECENTLY_MODIFIED_FIRST="Recently Modified First"
-MOD_LATEST_AUTHORS_LABEL="Authors"
-MOD_LATEST_AUTHORS_DESC="A filter for the Authors"
-MOD_LATEST_ANYONE="Anyone"
-MOD_LATEST_ADDED_OR_MODIFIED_BY_ME="Added or modified by me"
-MOD_LATEST_NOT_ADDED_OR_MODIFIED_BY_ME="Not added or modified by me"
+MOD_LATEST_FIELD_COUNT_LABEL="Count"
+MOD_LATEST_FIELD_COUNT_DESC="The number of items to display (default 5)"
+MOD_LATEST_FIELD_ORDERING_LABEL="Order"
+MOD_LATEST_FIELD_ORDERING_DESC="Ordering options"
+MOD_LATEST_FIELD_VALUE_AUTHORS_ANYONE="Anyone"
+MOD_LATEST_FIELD_VALUE_AUTHORS_BY_ME="Added or modified by me"
+MOD_LATEST_FIELD_VALUE_AUTHORS_NOT_BY_ME="Not added or modified by me"
+MOD_LATEST_FIELD_VALUE_ORDERING_ADDED="Recently Added First"
+MOD_LATEST_FIELD_VALUE_ORDERING_MODIFIED="Recently Modified First"
+MOD_LATEST_XML_DESCRIPTION="This Module shows a list of the most recently published Articles that are still current. Some that are shown may have expired even though they are the most recent."
